[project]
name = "python-cli"
version = "0.1.0"
description = ""
authors = [
    {name = "Rose Soriano",email = "rosesoriano.dtx@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "typer (>=0.20.0,<0.21.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
